style: correct padding  error for images and backgrounds and fade bars, about page on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1503,6 +1503,11 @@ https://medium.com/@tylerduprey_52451/a-perfect-video-container-with-css-37fd454
         background: linear-gradient(rgba(0, 0, 0, .7), rgb(72, 72, 72), rgb(41, 41, 41));
     }
 
+    #middle-fade-bar-about {
+        background: linear-gradient(transparent,rgba(0, 0, 0, .7));
+        z-index: 2;
+    }
+
     #fade-bar-about {
         z-index: 1;
     }
@@ -1521,7 +1526,6 @@ https://medium.com/@tylerduprey_52451/a-perfect-video-container-with-css-37fd454
 
     .about-img1 img {
         top: 0;
-        padding: 10px 3px 10px 3px;
         margin: 10px auto;
         width: 100%;
         border-radius: 3px;
@@ -1530,7 +1534,6 @@ https://medium.com/@tylerduprey_52451/a-perfect-video-container-with-css-37fd454
 
     .about-img2 img {
         top: 0;
-        padding: 10px 3px 10px 3px;
         margin: 10px auto;
         width: 100%;
         border-radius: 3px;
@@ -1889,7 +1892,6 @@ https://medium.com/@tylerduprey_52451/a-perfect-video-container-with-css-37fd454
 
     .about-img1 img {
         top: 0;
-        padding: 10px 3px 0 3px;
         margin: 10px auto;
         width: 100%;
         border-radius: 3px;
@@ -1898,7 +1900,6 @@ https://medium.com/@tylerduprey_52451/a-perfect-video-container-with-css-37fd454
 
     .about-img2 img {
         top: 0;
-        padding: 10px 3px 0 3px;
         margin: 10px auto;
         width: 100%;
         border-radius: 3px;
